--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,14 @@
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+
+        <!-- https://mvnrepository.com/artifact/io.socket/socket.io-client -->
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
+            <groupId>io.socket</groupId>
+            <artifactId>socket.io-client</artifactId>
+            <version>2.0.0</version>
         </dependency>
+
 
     </dependencies>
 </project>
